# Distributed-Imaging-Services

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  env.example  main.cpp
apps/data_logger/: CMakeLists.txt
apps/data_logger/src/: main.cpp
apps/feature_extractor/: CMakeLists.txt
apps/feature_extractor/src/: main.cpp
apps/image_generator/: CMakeLists.txt
apps/image_generator/src/: main.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake
libs/common/: CMakeLists.txt
libs/common/src/: config.cpp  env_loader.cpp  utils.cpp  version.cpp
scripts/: bootstrap.sh  build.sh  cleanup.sh  monitor_db.sh  run_all.sh
